<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"/>
        <item android:id="@+id/setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_setting"/>
        <item android:id="@+id/options"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us"/>
        <item android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout"/>
    </group>

</menu>