<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/exercise_details_layout">

    <VideoView
        android:id="@+id/exerciseDisplay"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:alpha="0"
        android:layout_alignParentTop="true"/>

    <ScrollView
        android:id="@+id/my_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/exerciseDisplay"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/position_des"
                android:textColor="@color/ourGreen"
                android:layout_margin="8dp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:layout_margin="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise_des"
                android:textColor="@color/ourGreen"
                android:layout_margin="8dp"
                />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:layout_margin="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hints"
                android:textColor="@color/ourGreen"
                android:layout_margin="8dp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:layout_margin="8dp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>